@@ -11,13 +11,20 @@ import java.util.*;
 @Repository
 public class UserRepository {
 
-    private List<User> users = new ArrayList<>();
+    private List<User> users;
+    public UserRepository() {
+        users = Arrays.asList(new User("Ana", "1123"),
+                new User("Viacheslav", "25416"),
+                new User("MamaSita", "234567754"));
+    }
 
-    public List<Authorities> getUserAuthorities(String user, String password) {
-        User person = new User(user, password);
-        if (users.contains(person)) {
-            return List.of(Authorities.READ, Authorities.WRITE, Authorities.DELETE);
+     public List<Authorities> getUserAuthorities(String user, String password) {
+
+        for (User person : users) {
+            if (person.getUser().equals(user) && person.getPassword().equals(password)) {
+                return Arrays.asList(Authorities.values());
+            }
         }
-        return Collections.emptyList();
+        return new ArrayList<>();
     }
 }
